# home-credit-system

./: .env  .gitignore  README.md  backup-db.sh  backup.bash  dev.sh  docker-compose-prod.yml  docker-compose.yml  home-credit-score.code-workspace  migrate.py  migrate.sql  package-lock.json  reload-db.sh  update.bash  update.fish  update.sh
backend/: Dockerfile  README.md  pyproject.toml
backend/hcs_api/: __main__.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/hsc_api/: __main__.py  api.md  crud.py  database.py  main.py  models.py  schemas.py
backend/tests/: create_activity_record_for_user.http
database/: Dockerfile  entrypoint.sh  entrypoint.sql
database/docker-entrypoint-initdb.d/: 000-entrypoint.sql
dbt/: Dockerfile.prod  pyproject.toml
dbt/home_credit_system/: dbt_project.yml
dbt/home_credit_system/models/: activity_records_daily.sql  activity_records_summary.sql  latest_activites.sql  latest_activities.sql  properties.yml  sources.yml  users_profile.sql
dbt/home_credit_system/models/presentation/: acitivty_records_cumulative.sql  activities.sql  activity_records_daily.sql  activity_records_summary.sql  users.sql
docs/: hcs-architecture.excalidraw  hcs-erd.plantuml
ingestion/: backup.sh  reload.sh
ingestion/queries/: activities.sql  activity_records.sql  setup.sql  users.sql
messages/: .gitignore
messages/mosquitto/config/: aclfile  mosquitto.conf
messages/notify/: README.md  pyproject.toml
messages/notify/notify/: __main__.py
src/routes/: +page.server.js  +page.server.ts  +page.svelte
webapp/: .gitignore  Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.js
webapp/src/: types.d.ts
webapp/src/lib/: Activity.svelte  ActivityTile.svelte  (+3 more)
(+8 files in other folders)
